add first steps of auth and minor styling additions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="loading-overlay"></div>
 
     <nav>
-        <img src="img/calendar-check-solid.svg" alt="Logo image">
+        <img id="img__logo" src="img/calendar-check-solid.svg" alt="Logo image">
         <ul>
             <li class="active">
                 <h2><i class="fas fa-newspaper"></i></h2>
@@ -38,11 +38,11 @@
             <a href="">Settings</a></li>
     </nav>
 
-    <div id="page__timeline">
+    <header>
+        <h1>Hi, Gabriella!</h1>
+    </header>
 
-        <header>
-            
-        </header>
+    <div id="page__timeline">
 
         <!-- TODAY -->
         <form id="form__today">
@@ -118,6 +118,8 @@
                 <input type="submit" value="+" name="submit">
             </div>
         </form>
+
+        <div class="spacer"></div>
     </div>
    
     <template id="tpl__toDo">
