remove the import for parcel

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
             <p></p>
         </div>
     </template>
+
+    <script src="https://cdn.auth0.com/js/auth0/9.10/auth0.min.js"></script>
+
     <script src="main.js"></script>
 </body>
 </html>
