--- a/login.html
+++ b/login.html
@@ -7,6 +7,67 @@
     <title>Login to PlanApp</title>
 </head>
 <body>
-    
+
+    <button id="loginBtn">
+        Login
+    </button>
+    <script src="https://cdn.auth0.com/js/auth0/9.10/auth0.min.js"></script>    
+<!-- Auth0 lock script -->
+    <script src="//cdn.auth0.com/js/lock/10.1.0/lock.min.js"></script>
+    <script>
+
+        const loginBtn = document.getElementById("loginBtn");
+
+        loginBtn.addEventListener("click", handleLogin);
+
+        function handleLogin() {
+            // e.preventDefault();
+            console.log('clicked');
+            lock.show();
+        }
+
+
+    const AUTH0_CLIENT_ID = "J29GOkS4S9yOkv9QqIK0nhNY7lJBn64e";
+    const AUTH0_DOMAIN = "planapp.eu.auth0.com";
+
+        var lock = new Auth0Lock(AUTH0_CLIENT_ID, AUTH0_DOMAIN, {
+            auth: {
+                // sso: false,
+                params: { scope: 'openid email' } //Details: https://auth0.com/docs/scopes
+            }
+        });
+
+
+
+    lock.on("authenticated", function (authResult) {
+        console.log('------ret');
+        
+        lock.getProfile(authResult.idToken, function (error, profile) {
+            if (error) {
+                // Handle error
+                return;
+            }
+            localStorage.setItem('id_token', authResult.idToken);
+
+            // Display user information
+            // show_profile_info(profile);
+
+            // global ajax Authorization setup
+            $.ajaxPrefilter(function (options) {
+                if (!options.beforeSend) {
+                    options.beforeSend = function (xhr) {
+                        xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage.getItem('id_token'));
+                    }
+                }
+            });
+
+            // get task items from database
+            // getItems();
+        });
+    });
+
+
+    </script>
+
 </body>
 </html>
